@@ -8,7 +8,8 @@ NOISE_FLAGS = -I/usr/include/libnoise -L/usr/lib -lnoise
 all : main
 
 main : main.o Map.o World.o Tile.o WindowHandler.o EventHandler.o Movable.o \
-        Player.o Collider.o Hotbar.o Entity.o Inventory.o Item.o Action.o
+        Player.o Collider.o Hotbar.o Entity.o Inventory.o Item.o Action.o \
+        Sprite.o
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -o $@ $(LDFLAGS) $(NOISE_FLAGS)
 
 main.o : main.cc World.hh Tile.hh Map.hh WindowHandler.hh EventHandler.hh \
@@ -61,6 +62,9 @@ Item.o : Item.cc Item.hh Sprite.hh Inventory.hh Action.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 Action.o : Action.cc Action.hh Sprite.hh Inventory.hh
+	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
+
+Sprite.o : Sprite.cc Sprite.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 clean :
