@@ -1,0 +1,15 @@
+#include "Sprite.hh"
+
+// Constructor
+Sprite::Sprite() {
+    // Initialize all the values
+    name = "";
+    texture = NULL;
+    width = 0;
+    height = 0;
+    rows = 0;
+    cols = 0;
+    row = 0;
+    col = 0;
+}
+
