@@ -22,6 +22,9 @@ struct Sprite {
     // When referring to specific square, it's row and column (0 indexed)
     int row;
     int col;
+
+    // The constructor
+    Sprite();
 };
 
 #endif
